--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   position: relative;
   overflow: hidden;
   resize: horizontal;
+  height: 100vh;
   /* background-image: url(/background_elements/2336.png);
   /* background-position: cover; */
   /* background-size: cover;
@@ -77,16 +78,18 @@ h1 {
   height: 100px;
 }
 .bonus {
-  width: 10%;
-  z-index: 100;
   position: absolute;
-  top: 79vh;
-  left: 50%;
+  width: 12rem;
+  z-index: 100;
+
+  bottom: 0;
+  left: 45vw;
 }
 .tornado {
   position: absolute;
-  width: 1000px;
+  width: 50vw;
   left: -300px;
+  top: -4vw;
   z-index: 200;
   animation: move 3s;
   animation-fill-mode: forwards;
@@ -109,6 +112,7 @@ h1 {
 .png {
   position: fixed;
   width: 100vw;
+  height: 100vh;
   visibility: visible;
   height: 60vw;
   z-index: -1;
