--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h3 {
   width: 90vw;
   height: 80vh;
   left: 5vw;
-  background-color: rgba(255, 255, 255, 0.788);
+  background-color: rgba(255, 255, 255, 0.89);
   border-radius: 30px;
   top: -410vw;
 
@@ -158,15 +158,15 @@ h3 {
 }
 @keyframes end {
   to {
-    top: 6vw;
+    top: 3vw;
   }
 }
 
 .final {
-  height: 100%;
+  width: 100%;
 
   position: absolute;
-  top: 2.5%;
+  top: -8%;
 }
 
 .message {
